--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <p>
           <a href="/powwd/index">Introduction</a><br />
-          <a href="/hexcraft/blog/chapter-001">Chapter 1 - Anything that helps any one of us, helps all of us</a><br />
+          <a href="/hexcraft/blog/chapter-001">Chapter 1</a><br />
           <br />
           <br />
         </p>
